[package]
name = "fast_symspell"
version = "0.1.6"
license = "MIT"
authors = ["daibo"]
keywords = ["spellcheck"]
description = "Spelling correction & Fuzzy search"
exclude = [
    "data/*",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
derive_builder = "^0.9"
ahash = "0.7.2"
triple_accel = "0.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
unidecode = "^0.3"

[target.wasm32-unknown-unknown.dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"]}

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "^0.3"

[dev-dependencies]
